# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[tool.poetry]
name = "rite"
version = "0.0.1"
description = "utilities."
authors = ["Scape Agency <info@scape.agency>"]
license = "MIT License"
readme = "README.md"
homepage = "https://www.pyrites.dev"
repository = "https://github.com/scape-agency/rite"
documentation = "https://github.com/scape-agency/rite/docs"
keywords = [
    "rite",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "src/**",
    "README.md",
    "LICENSE",
    "docs/**",  # Include documentation in the package
]
packages = [{ include = "rite", from = "src" }]


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = ">=3.10,<4.0"


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"           # Framework for testing
pytest-cov = "^6.0.0"       # Code coverage for tests
black = "^24.8.0"           # Code formatter
flake8 = "^7.1.0"           # Linter for code quality
mypy = "^1.14.0"            # Static type checker
sphinx = "^8.0.2"           # Documentation generator
isort = "^5.10.1"           # Import sorter
tox = "^4.4.6"              # Testing multiple environments
pre-commit = "^4.0.1"       # Pre-commit hooks for linting and formatting


# =============================================================================
# Build System
# =============================================================================

[build-system]
# requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
# build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# Scripts
# =============================================================================

[tool.poetry.scripts]
rite = "rite.__main__:main"         # Entry point for the package
test = "pytest --cov=rite tests/"         # Run tests with coverage
lint = "flake8 src/sense/core/:main"            # Run linter on source files
format = "black src/sense/core/:main"           # Format source files
type-check = "mypy src/sense/core/:main"        # Type-check source files


# =============================================================================
# Tox Configuration
# =============================================================================

[tool.tox]
envlist = ["py310", "py311", "py312", "lint", "type-check"]

[tool.tox.default]
description = "Run all test environments."

[tool.tox.env.py310]
description = "Run tests with Python 3.10."
deps = ["pytest", "pytest-cov"]
commands = ["pytest --cov=rite tests/"]

[tool.tox.env.py311]
description = "Run tests with Python 3.11."
deps = ["pytest", "pytest-cov"]
commands = ["pytest --cov=rite tests/"]

[tool.tox.env.py312]
description = "Run tests with Python 3.12."
deps = ["pytest", "pytest-cov"]
commands = ["pytest --cov=rite tests/"]

[tool.tox.env.lint]
description = "Run linting with flake8."
deps = ["flake8"]
commands = ["flake8 src/"]

[tool.tox.env.type-check]
description = "Run type-checking with mypy."
deps = ["mypy"]
commands = ["mypy src/"]
